--- a/ide/ui/ide-orion/src/main/resources/ide-orion/editor.html
+++ b/ide/ui/ide-orion/src/main/resources/ide-orion/editor.html
@@ -8,7 +8,6 @@
   ~ Contributors:
   ~ SAP - initial API and implementation
   -->
-
 <html>
     <head>
 		<meta http-equiv="Content-Language" content="en-us">
@@ -60,12 +59,16 @@
 		
 		<script src="editorBuild/code_edit/built-codeEdit.js"></script>
 		<script>
-		
+
+			var csrfToken;
+
 			function getResource(resourcePath) {
 		        var xhr = new XMLHttpRequest();
 		        xhr.open('GET', resourcePath, false);
+		        xhr.setRequestHeader('X-CSRF-Token', 'Fetch');
 		        xhr.send();
 		        if (xhr.status === 200) {
+		        	csrfToken = xhr.getResponseHeader("x-csrf-token");
 		        	return xhr.responseText;
 		        }
 			}
@@ -186,9 +189,7 @@
 					});
 				});
 			};
-		</script>
 
-		<script>
 			var messageHub = new FramesMessageHub();
 		
 			function saveContents(text) {
@@ -196,6 +197,7 @@
 					var xhr = new XMLHttpRequest();
 					xhr.open('PUT', '../../../../services/v4/ide/workspaces' + file);
 					xhr.setRequestHeader('X-Requested-With', 'Fetch');
+					xhr.setRequestHeader('X-CSRF-Token', csrfToken);
 					xhr.onreadystatechange = function() {
 						if (xhr.readyState === 4) {
 							dirty = false;
